--- a/settings.gradle
+++ b/settings.gradle
@@ -16,6 +16,7 @@ include 'spring-annotation'
 include 'spring-bom'
 include 'spring-boot-annotation'
 include 'spring-boot'
+include 'spring-boot-starter'
 include 'spring-web-annotation'
 include 'spring-web'
 include 'spring-context'
