--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,11 @@
 [versions]
-dummy = "1.0"
 managed-spring-boot = '2.7.0'
 managed-spring = '5.3.20'
 
 junit = '5.9.0'
 servlet-api = '4.0.1'
 h2 = '2.1.214'
+jakarta-annotation = '2.1.1'
 
 [libraries]
 managed-spring-boot = { module = 'org.springframework.boot:spring-boot', version.ref = 'managed-spring-boot' }
@@ -31,7 +31,7 @@ junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api', version.re
 junit-jupiter-engine = { module = 'org.junit.jupiter:junit-jupiter-engine', version.ref = 'junit' }
 
 servlet-api = { module = 'javax.servlet:javax.servlet-api', version.ref = 'servlet-api' }
-
+jakarta-annotation = { module = 'jakarta.annotation:jakarta.annotation-api', version.ref = 'jakarta-annotation' }
 spring-test = { module = 'org.springframework:spring-test', version.ref = 'managed-spring' }
 
 spock-spring = { module = 'org.spockframework:spock-spring' }
