--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
@@ -2,6 +2,11 @@ plugins {
     id 'io.micronaut.build.internal.module'
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
+
 dependencies {
     api(platform(libs.boms.spring))
     testImplementation(platform(libs.boms.spring))
