--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,10 @@
-projectVersion=4.2.2-SNAPSHOT
+projectVersion=5.0.0-SNAPSHOT
 projectGroup=io.micronaut.spring
 
 micronautDocsVersion=2.0.0
-micronautVersion=3.5.1
-micronautTestVersion=3.3.0
-
-groovyVersion=3.0.10
+micronautVersion=4.0.0-SNAPSHOT
+micronautTestVersion=3.4.0
+groovyVersion=3.0.12
 spockVersion=2.1-groovy-3.0
 
 title=Micronaut for Spring
@@ -14,7 +13,7 @@ projectUrl=https://micronaut.io
 githubSlug=micronaut-projects/micronaut-spring
 developers=Graeme Rocher
 
-githubCoreBranch=3.6.x
+githubCoreBranch=4.0.x
 bomProperty=micronautSpringVersion
 
 springbootapi=https://docs.spring.io/spring-boot/docs/current/api
