--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,13 @@ include 'test-suite'
 
 enableFeaturePreview 'TYPESAFE_PROJECT_ACCESSORS'
 
+dependencyResolutionManagement {
+    repositories {
+        mavenCentral()
+        maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    }
+}
+
 micronautBuild {
     importMicronautCatalog()
 }
