--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     testImplementation mn.micronaut.inject.java
     testImplementation projects.springAnnotation
     testImplementation mn.micronaut.inject.java.test
-    testImplementation "org.springframework:spring-jdbc:5.3.20"
+    testImplementation("org.springframework:spring-jdbc:5.3.20") {
+        because 'not defined in toml because it hit a bug with version catalogs'
+    }
     testImplementation libs.h2database
 
     if (!JavaVersion.current().isJava9Compatible()) {
