use buildSrc scripts to avoid unnecessary duplication

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
@@ -1,10 +1,6 @@
 plugins {
+    id 'io.micronaut.build.internal.spring-base'
     id 'io.micronaut.build.internal.module'
-}
-
-repositories {
-    mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
