--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -1,11 +1,7 @@
 plugins {
+    id 'io.micronaut.build.internal.spring-base'
     id 'java-library'
     id 'groovy'
-}
-
-repositories {
-    mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 dependencies {
