ci: version to 5.0.0 Micronaut 4.0.0-SNAPSHOT githubCoreBranch=4.0.x (#348)
* Prepare for Micronaut 4 (no deprecated code found to remove)

* use buildSrc scripts to avoid unnecessary duplication

--- a/test-suite/build.gradle
+++ b/test-suite/build.gradle
@@ -1,10 +1,7 @@
 plugins {
+    id 'io.micronaut.build.internal.spring-base'
     id 'java-library'
     id 'groovy'
-}
-
-repositories {
-    mavenCentral()
 }
 
 dependencies {
@@ -15,7 +12,7 @@ dependencies {
     testImplementation mn.spock
     testImplementation libs.junit.jupiter.api
     testRuntimeOnly libs.junit.jupiter.engine
-    
+
 }
 
 tasks.named('test') {
