Improve support for Spring Bean Import and add Spring Boot Starter (#332)
- Adds support for using Spring @Import annotation to import Spring beans into a Micronaut application.
- Adds a new micronaut-spring-boot-starter module that auto configures and exposes all Micronaut beans as Spring beans

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
@@ -2,6 +2,10 @@ plugins {
     id 'io.micronaut.build.internal.module'
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     api(platform(libs.boms.spring))
     testImplementation(platform(libs.boms.spring))
