--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -8,8 +8,7 @@ dependencies {
     api libs.managed.spring.context
     api mn.micronaut.aop
     api mn.micronaut.inject
-
-    implementation projects.spring
+    api projects.spring
     implementation mn.micronaut.cache.core
 
     testAnnotationProcessor mn.micronaut.inject.java
@@ -19,6 +18,10 @@ dependencies {
     testImplementation mn.micronaut.inject.java
     testImplementation projects.springAnnotation
     testImplementation mn.micronaut.inject.java.test
+    testImplementation("org.springframework:spring-jdbc:5.3.20") {
+        because 'not defined in toml because it hit a bug with version catalogs'
+    }
+    testImplementation libs.h2database
 
     if (!JavaVersion.current().isJava9Compatible()) {
         testImplementation files(Jvm.current().toolsJar)
