--- a/spring-boot-starter/build.gradle
+++ b/spring-boot-starter/build.gradle
@@ -12,10 +12,7 @@ dependencies {
 
     testAnnotationProcessor mn.micronaut.inject.java
 
-    testImplementation projects.springWeb
-    testImplementation mn.micronaut.management
-    testImplementation mn.micronaut.http.client
-    testImplementation mn.micronaut.http.server.netty
+    testImplementation mn.micronaut.http
     testImplementation libs.spring.boot.autoconfigure
     testImplementation libs.spring.boot.actuator
     testImplementation libs.spring.boot.test
