build to 6.0.1, test to 4.0.0-SNAPSHOT, groovy to 4.0.6, spock to 2.3-groovy-4.0, github workflows to Java 17

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ projectGroup=io.micronaut.spring
 
 micronautDocsVersion=2.0.0
 micronautVersion=4.0.0-SNAPSHOT
-micronautTestVersion=3.4.0
-groovyVersion=3.0.12
-spockVersion=2.1-groovy-3.0
+micronautTestVersion=4.0.0-SNAPSHOT
+groovyVersion=4.0.6
+spockVersion=2.3-groovy-4.0
 
 title=Micronaut for Spring
 projectDesc=Extensions to integrate Micronaut and Spring
