--- a/spring-boot/build.gradle
+++ b/spring-boot/build.gradle
@@ -12,6 +12,9 @@ dependencies {
     testAnnotationProcessor projects.springBootAnnotation
     testAnnotationProcessor projects.springWebAnnotation
 
+    testCompileOnly libs.asm
+    testCompileOnly libs.asm.commons
+
     testImplementation projects.springWeb
     testImplementation mn.micronaut.management
     testImplementation mn.micronaut.http.client
@@ -22,4 +25,5 @@ dependencies {
 
     testRuntimeOnly libs.managed.spring.boot.starter.web
     testRuntimeOnly libs.spring.boot.starter.tomcat
+    testRuntimeOnly mn.javax.annotation.api
 }
