--- a/spring/build.gradle
+++ b/spring/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.runtime
     testCompileOnly mn.micronaut.inject.groovy
+    testCompileOnly libs.asm
+    testCompileOnly libs.asm.commons
 
     testImplementation libs.spock.spring
     testImplementation libs.spring.test
