--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-module.gradle
@@ -10,6 +10,6 @@ repositories {
 dependencies {
     api(platform(libs.boms.spring))
     testImplementation(platform(libs.boms.spring))
-    compileOnly 'com.google.code.findbugs:jsr305' // for "warning: unknown enum constant When.MAYBE"
-    testCompileOnly 'com.google.code.findbugs:jsr305' // for "warning: unknown enum constant When.MAYBE"
+    //compileOnly 'com.google.code.findbugs:jsr305' // for "warning: unknown enum constant When.MAYBE"
+    //testCompileOnly 'com.google.code.findbugs:jsr305' // for "warning: unknown enum constant When.MAYBE"
 }
