--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     api mn.micronaut.aop
     api mn.micronaut.inject
     api projects.spring
-    implementation mn.micronaut.cache.core
+    implementation(mnCache.micronaut.cache.core)
 
     testAnnotationProcessor mn.micronaut.inject.java
     testAnnotationProcessor projects.springAnnotation
