--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 
     testAnnotationProcessor mn.micronaut.inject.java
     testAnnotationProcessor projects.springAnnotation
-
+    testImplementation mn.micronaut.jackson.databind
     testImplementation mn.micronaut.runtime
     testImplementation mn.micronaut.inject.java
     testImplementation projects.springAnnotation
