--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ managed-spring-boot = '3.0.0'
 managed-spring = '6.0.3'
 
 junit = '5.9.1'
-servlet-api = '4.0.1'
+servlet-api = '6.0.0'
 h2 = '2.1.214'
 jakarta-annotation = '2.1.1'
 
@@ -37,7 +37,7 @@ spring-boot-test = { module = 'org.springframework.boot:spring-boot-starter-test
 junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api' }
 junit-jupiter-engine = { module = 'org.junit.jupiter:junit-jupiter-engine' }
 
-servlet-api = { module = 'javax.servlet:javax.servlet-api', version.ref = 'servlet-api' }
+servlet-api = { module = 'jakarta.servlet:jakarta.servlet-api', version.ref = 'servlet-api' }
 jakarta-annotation = { module = 'jakarta.annotation:jakarta.annotation-api', version.ref = 'jakarta-annotation' }
 spring-test = { module = 'org.springframework:spring-test', version.ref = 'managed-spring' }
 
