fix javadoc task

--- a/build.gradle
+++ b/build.gradle
@@ -3,3 +3,7 @@ plugins {
     id 'io.micronaut.build.internal.quality-reporting'
 }
 
+repositories {
+    mavenCentral()
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+}
