--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,12 @@
 [versions]
 managed-spring-boot = '2.7.6'
 managed-spring = '5.3.24'
+micronaut = "3.8.1"
+micronaut-docs = "2.0.0"
+micronaut-test = "3.8.0"
+groovy = "3.0.13"
+spock = "2.1-groovy-3.0"
+
 
 junit = '5.9.1'
 servlet-api = '4.0.1'
