Fix usages of annotation API

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-base.gradle
@@ -1,6 +1,16 @@
 repositories {
     mavenCentral()
-    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
+    mavenLocal {
+        content {
+            includeGroup("io.micronaut")
+        }
+    }
+    maven {
+        url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+        content {
+            excludeGroup("io.micronaut")
+        }
+    }
 }
 
 configurations.all {
