revert maven local change

--- a/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-base.gradle
+++ b/buildSrc/src/main/groovy/io.micronaut.build.internal.spring-base.gradle
@@ -1,16 +1,6 @@
 repositories {
     mavenCentral()
-    mavenLocal {
-        content {
-            includeGroup("io.micronaut")
-        }
-    }
-    maven {
-        url "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-        content {
-            excludeGroup("io.micronaut")
-        }
-    }
+    maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 configurations.all {
