--- a/spring-annotation/build.gradle
+++ b/spring-annotation/build.gradle
@@ -19,5 +19,5 @@ dependencies {
     testImplementation libs.managed.spring.tx
 }
 
-compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
-compileTestGroovy.options.fork=true
+//compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
+//compileTestGroovy.options.fork=true
