--- a/spring-annotation/build.gradle
+++ b/spring-annotation/build.gradle
@@ -6,18 +6,19 @@ dependencies {
     api(platform(libs.boms.spring))
     api mn.micronaut.inject
     api mn.micronaut.aop
-    api mn.micronaut.validation
+    api mnValidation.micronaut.validation
+    implementation mnValidation.micronaut.validation.processor
 
     implementation mn.micronaut.core.processor
-    implementation projects.spring
-    implementation projects.springContext
+    implementation projects.micronautSpring
+    implementation projects.micronautSpringContext
 
     implementation mn.micronaut.runtime
     implementation(mnCache.micronaut.cache.core)
 
     testAnnotationProcessor mn.micronaut.inject.java
     testImplementation mn.micronaut.inject.groovy
-    testImplementation projects.spring
+    testImplementation projects.micronautSpring
     testImplementation libs.managed.spring.tx
 }
 
