--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ jakarta-annotation = '2.1.1'
 
 micronaut-cache = "4.0.0-SNAPSHOT"
 micronaut-views = "3.8.1"
+micronaut-validation = "4.0.0-SNAPSHOT"
 
 [libraries]
 managed-spring-boot = { module = 'org.springframework.boot:spring-boot', version.ref = 'managed-spring-boot' }
@@ -23,6 +24,7 @@ managed-spring-boot-starter-web = { module = 'org.springframework.boot:spring-bo
 
 micronaut-cache = { module = "io.micronaut.cache:micronaut-cache-bom", version.ref = "micronaut-cache" }
 micronaut-views = { module = "io.micronaut.views:micronaut-views-bom", version.ref = "micronaut-views" }
+micronaut-validation = { module = "io.micronaut.validation:micronaut-validation-bom", version.ref = "micronaut-validation" }
 
 managed-spring = { module = 'org.springframework:spring-core', version.ref = 'managed-spring' }
 managed-spring-context = { module = 'org.springframework:spring-context', version.ref = 'managed-spring' }
