--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,17 +4,17 @@ managed-spring = '6.0.8'
 
 junit = '5.9.1'
 servlet-api = '6.0.0'
-micronaut = "4.0.0-M1"
+micronaut = "4.0.0-M2"
 micronaut-docs = "2.0.0"
-micronaut-test = "4.0.0-SNAPSHOT"
-groovy = "4.0.7"
+micronaut-test = "4.0.0-M1"
+groovy = "4.0.11"
 spock = "2.3-groovy-4.0"
 h2 = '2.1.214'
 jakarta-annotation = '2.1.1'
 
 micronaut-cache = "4.0.0-M1"
 micronaut-views = "4.0.0-M1"
-micronaut-validation = "4.0.0-M2"
+micronaut-validation = "4.0.0-M4"
 
 [libraries]
 managed-spring-boot = { module = 'org.springframework.boot:spring-boot', version.ref = 'managed-spring-boot' }
