--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ junit = "5.9.1"
 servlet-api = "6.0.0"
 micronaut = "4.0.0"
 micronaut-docs = "2.0.0"
-micronaut-test = "4.0.0-M8"
+micronaut-test = "4.0.0"
 groovy = "4.0.12"
 spock = "2.3-groovy-4.0"
 h2 = '2.2.220'
