Add documentation for supported Spring Data annotations.
closes #168

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,5 +15,7 @@ developers=Graeme Rocher
 
 
 springbootapi=https://docs.spring.io/spring-boot/docs/current/api
+springdataapi=https://docs.spring.io/spring-data/data-commons/docs/current/api/
 micronautcache=https://micronaut-projects.github.io/micronaut-cache/latest/api/io/micronaut/cache/
 micronautspringapi=https://micronaut-projects.github.io/micronaut-spring/latest/api
+micronautdataapi=https://micronaut-projects.github.io/micronaut-data/latest/api/io/micronaut/
