Add links to guides for Micronaut Spring

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -20,4 +20,5 @@ micronautInsideSpring:
     title: Using Micronaut Parent Context
   beanPostProcessor:
     title: Using a Bean Post Processor
+springGuides: Guides
 repository: Repository
