Fixed gradle scripts. Fixed dependencies. Removed extra libraries from versions catalog. Upgrade libs.

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,4 +30,5 @@ micronautBuild {
     importMicronautCatalog("micronaut-cache")
     importMicronautCatalog("micronaut-views")
     importMicronautCatalog("micronaut-validation")
+    importMicronautCatalog("micronaut-servlet")
 }
