--- a/spring-context/build.gradle
+++ b/spring-context/build.gradle
@@ -7,17 +7,17 @@ dependencies {
     api mn.micronaut.aop
     api mn.micronaut.inject
     api projects.micronautSpring
+
     implementation(mnCache.micronaut.cache.core)
 
     testAnnotationProcessor mn.micronaut.inject.java
     testAnnotationProcessor projects.micronautSpringAnnotation
+
     testImplementation mn.micronaut.jackson.databind
     testImplementation mn.micronaut.runtime
     testImplementation mn.micronaut.inject.java
     testImplementation projects.micronautSpringAnnotation
     testImplementation mn.micronaut.inject.java.test
-    testImplementation("org.springframework:spring-jdbc:6.1.3") {
-        because 'not defined in toml because it hit a bug with version catalogs'
-    }
+    testImplementation libs.managed.spring.jdbc
     testImplementation libs.h2database
 }
