Fixed gradle scripts. (#524)
* Fixed gradle scripts.
Fixed dependencies.
Removed extra libraries from versions catalog.
Upgrade libs.

* Update gradle/libs.versions.toml

* Update spring-annotation/build.gradle

* Update spring-annotation/build.gradle

* Fixed gradle scripts.
Fixed dependencies.
Removed extra libraries from versions catalog.
Upgrade libs.

---------

Co-authored-by: Sergio del Amo <sergio.delamo@softamo.com>

--- a/spring-annotation/build.gradle
+++ b/spring-annotation/build.gradle
@@ -3,24 +3,21 @@ plugins {
 }
 
 dependencies {
-    api(platform(libs.boms.spring))
+    api platform(libs.boms.spring)
     api mn.micronaut.inject
     api mn.micronaut.aop
     api mnValidation.micronaut.validation
-    implementation mnValidation.micronaut.validation.processor
 
+    implementation mnValidation.micronaut.validation.processor
     implementation mn.micronaut.core.processor
     implementation projects.micronautSpring
     implementation projects.micronautSpringContext
-
     implementation mn.micronaut.runtime
-    implementation(mnCache.micronaut.cache.core)
+    implementation mnCache.micronaut.cache.core
 
     testAnnotationProcessor mn.micronaut.inject.java
+
     testImplementation mn.micronaut.inject.groovy
     testImplementation projects.micronautSpring
     testImplementation libs.managed.spring.tx
 }
-
-compileTestGroovy.options.forkOptions.jvmArgs =['-Xdebug', '-Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005']
-compileTestGroovy.options.fork=true
