--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,32 +2,28 @@
 managed-spring-boot = "3.2.2"
 managed-spring = "6.1.3"
 
-junit = "5.9.1"
-servlet-api = "6.0.0"
+groovy = "4.0.18"
+h2 = '2.2.224'
+
 micronaut = "4.3.1"
 micronaut-docs = "2.0.0"
-micronaut-test = "4.0.0"
-groovy = "4.0.15"
-spock = "2.3-groovy-4.0"
-h2 = '2.2.224'
-jakarta-annotation = '2.1.1'
-
+micronaut-test = "4.2.0"
 micronaut-cache = "4.2.1"
 micronaut-views = "5.1.0"
 micronaut-validation = "4.3.0"
+micronaut-servlet = "4.5.0"
 
 [libraries]
-# Core
+# Micronaut
 micronaut-core = { module = 'io.micronaut:micronaut-core-bom', version.ref = 'micronaut' }
+micronaut-cache = { module = "io.micronaut.cache:micronaut-cache-bom", version.ref = "micronaut-cache" }
+micronaut-views = { module = "io.micronaut.views:micronaut-views-bom", version.ref = "micronaut-views" }
+micronaut-validation = { module = "io.micronaut.validation:micronaut-validation-bom", version.ref = "micronaut-validation" }
+micronaut-servlet = { module = "io.micronaut.servlet:micronaut-servlet-bom", version.ref = "micronaut-servlet" }
 
 managed-spring-boot = { module = 'org.springframework.boot:spring-boot', version.ref = 'managed-spring-boot' }
 managed-spring-boot-starter = { module = 'org.springframework.boot:spring-boot-starter', version.ref = 'managed-spring-boot' }
 managed-spring-boot-starter-web = { module = 'org.springframework.boot:spring-boot-starter-web', version.ref = 'managed-spring-boot' }
-
-
-micronaut-cache = { module = "io.micronaut.cache:micronaut-cache-bom", version.ref = "micronaut-cache" }
-micronaut-views = { module = "io.micronaut.views:micronaut-views-bom", version.ref = "micronaut-views" }
-micronaut-validation = { module = "io.micronaut.validation:micronaut-validation-bom", version.ref = "micronaut-validation" }
 
 managed-spring = { module = 'org.springframework:spring-core', version.ref = 'managed-spring' }
 managed-spring-context = { module = 'org.springframework:spring-context', version.ref = 'managed-spring' }
@@ -44,11 +40,6 @@ spring-boot-starter-thymeleaf = { module = 'org.springframework.boot:spring-boot
 spring-boot-starter-tomcat = { module = 'org.springframework.boot:spring-boot-starter-tomcat', version.ref = 'managed-spring-boot' }
 spring-boot-test = { module = 'org.springframework.boot:spring-boot-starter-test', version.ref = 'managed-spring-boot' }
 
-junit-jupiter-api = { module = 'org.junit.jupiter:junit-jupiter-api' }
-junit-jupiter-engine = { module = 'org.junit.jupiter:junit-jupiter-engine' }
-
-servlet-api = { module = 'jakarta.servlet:jakarta.servlet-api', version.ref = 'servlet-api' }
-jakarta-annotation = { module = 'jakarta.annotation:jakarta.annotation-api', version.ref = 'jakarta-annotation' }
 spring-test = { module = 'org.springframework:spring-test', version.ref = 'managed-spring' }
 
 spock-spring = { module = 'org.spockframework:spock-spring' }
