Remove deprecated code for Micronaut Framework 5 and document breaking changes.

--- a/src/main/docs/guide/toc.yml
+++ b/src/main/docs/guide/toc.yml
@@ -21,4 +21,5 @@ micronautInsideSpring:
   beanPostProcessor:
     title: Using a Bean Post Processor
 springGuides: Guides
+breaks: Breaking Changes
 repository: Repository
